package com.pluralsight.chips;

public enum ChipsType {
    LAYS,
    DORITOS,
    BBQ,
    SALT_N_VINEGAR
}
