package com.pluralsight.drinks;

public enum DrinkSize {
    SMALL,
    MEDIUM,
    LARGE,
}
