package com.pluralsight.drinks;

public enum DrinkType {
    Lemonade,
    Coke,
    Pepsi,
    Sprite,
    FRUIT_PUNCH, SPRITE, PEPSI, COKE, LEMONADE, Fruit_punch

}
