package com.pluralsight.sandwich;

// Enum class that holds constants of types of bread
public enum BreadType {
    WHITE,
    WHEAT,
    RYE,
    WRAP
}