package com.pluralsight.sandwich;

public interface Product {
    double getPrice();

    String getCsvString();
}

