package com.pluralsight.sandwich;

// Enum class that hold my constants for regular toppings
public enum RegularTop {
    LETTUCE,
    PEPPERS,
    ONIONS,
    TOMATOES,
    JALEPENOS,
    CUCUMBERS,
    PICKLES,
    GUACAMOLE,
    MUSHROOMS,
    MAYO,
    MUSTARD,

}
