package com.pluralsight.sandwich;

public enum SandwichSize {

    SMALL,
    MEDIUM,
    LARGE,

}
