package com.pluralsight.sandwich;

// Enum class that holds constants of type of cheese
public enum TypeOfCheese {
    AMERICAN,
    PROVOLONE,
    CHEDDAR,
    SWISS
}
