package com.pluralsight.sandwich;

// Enum class that hold constants types of meat
public enum TypeOfMeat {
    STEAK,
    HAM,
    SALAMI,
    ROAST_BEEF,
    CHICKEN,
    BACON
}
